--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.2"
 
     defaultConfig {
-        applicationId "de.example.frank.location"
+        applicationId "de.example.chrisbee.myLocation"
         minSdkVersion 22
         targetSdkVersion 24
         versionCode 1
